Bug 970346 - Add a DocShell attribute to override the default touch event options to a tab. r=bz

MozReview-Commit-ID: 4BdhwQRBavd